--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
     "typescript": "^4.8.2",
-    "vite": "^3.2.6",
-    "vite-plugin-elm": "^2.7.2"
+    "vite": "^4.3.2",
+    "vite-plugin-elm": "^2.8.0-beta.5"
   }
 }
